Even more functionality

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ aria-hidden="true">
     <header class="container-fluid py-4 px-5 hidden">
         <div class="row">
             <div class="col-8">
-                <h1>'s Bullet Journal</h1>
+                
             </div>
             <div class="col-4">
                 <nav class="dropdown">
@@ -67,9 +67,7 @@ aria-hidden="true">
                         <i class="material-icons">menu</i>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Login</a>
-                        <a class="dropdown-item" href="#">Register</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">Logout</a>
                     </div>
                 </nav>
             </div>
@@ -84,80 +82,15 @@ aria-hidden="true">
         </div>
         <div id="bujospread" class="container">
             <div id="bujomon" class="bujoday p-2 row">
-                <div class="col-1">
-                    <h3>M</h3>
+                <div class="col-3">
+                    <h3>Entries</h3>
                 </div>
-                <div class="col-11">
+                <div class="col-9">
                     <!-- append list of tasks here -->
                 </div>
             </div>
-            <div id="bujotues" class="bujoday p-2 row">
-                <div class="col-1">
-                    <h3>T</h3>
-                </div>
-                <div class="col-11">
-                    <ul>
-                        <li>To do placeholder</li>
-                        <li>I'm tired placeholder</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="bujowed" class="bujoday p-2 row">
-                <div class="col-1">
-                    <h3>W</h3>
-                </div>
-                <div class="col-11">
-                    <ul>
-                        <li>To do placeholder</li>
-                        <li>I'm tired placeholder</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="bujothu" class="bujoday p-2 row">
-                <div class="col-1">
-                    <h3>T</h3>
-                </div>
-                <div class="col-11">
-                    <ul>
-                        <li>To do placeholder</li>
-                        <li>I'm tired placeholder</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="bujofri" class="bujoday p-2 row">
-                <div class="col-1">
-                    <h3>F</h3>
-                </div>
-                <div class="col-11">
-                    <ul>
-                        <li>To do placeholder</li>
-                        <li>I'm tired placeholder</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="bujosat" class="bujoday p-2 row">
-                <div class="col-1">
-                    <h3>S</h3>
-                </div>
-                <div class="col-11">
-                    <ul>
-                        <li>To do placeholder</li>
-                        <li>I'm tired placeholder</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="bujosun" class="bujoday p-2 row">
-                <div class="col-1">
-                    <h3>S</h3>
-                </div>
-                <div class="col-11">
-                    <ul>
-                        <li>To do placeholder</li>
-                        <li>I'm tired placeholder</li>
-                    </ul>
-                </div>
-            </div>
         </div>
+        <!-- <button class="save">Save</button>  -->
     </div>
 
     
