--- a/index.html
+++ b/index.html
@@ -90,7 +90,14 @@ aria-hidden="true">
                 </div>
             </div>
         </div>
-        <!-- <button class="save">Save</button>  -->
+        <!-- make a form to create an entry here  -->
+        <div class="new-entry row p-2 mt-4 justify-content-center">
+        <form id="new-task">
+            <label for="tname"></label>
+            <input type="text" id="tname" name="tname" placeholder="New Task">
+            <input type="submit" value="Add">
+        </form>
+        </div>
     </div>
 
     
