--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ aria-hidden="true">
             </div>
             <div class="col-4">
                 <nav class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">menu</i>
                     </button>
@@ -72,13 +72,20 @@ aria-hidden="true">
         </div>
     </header>
 
-    <div id="content" class="container p-4 border hidden">
-        <div id="bujoweek">
-            <button class="btn"><a href="#"><i class="material-icons">arrow_back</i></a></button>
+    <div id="content" class="container border hidden">
+            <!-- success alert for new entry -->
+            <div class="alert alert-success alert-dismissible alert-task" role="alert">
+                    Entry successfully saved!
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+            </div>
+        <div id="bujoweek" class="p-2">
+            <button class="btn btn-light"><a href="#"><i class="material-icons">arrow_back</i></a></button>
             <h2></h2>
-            <button class="btn"><a href="#"><i class="material-icons">arrow_forward</i></a></button>
+            <button class="btn btn-light"><a href="#"><i class="material-icons">arrow_forward</i></a></button>
         </div>
-        <div id="bujospread" class="container">
+        <div id="bujospread" class="container p-2">
             <div id="bujomon" class="bujoday p-2 row">
                 <div class="col-3">
                     <h3>Entries</h3>
@@ -89,13 +96,14 @@ aria-hidden="true">
             </div>
         </div>
         <!-- make a form to create an entry here  -->
-        <div class="new-entry row p-2 mt-4 justify-content-center">
-        <form id="new-task">
+        <div class="new-entry row p-5 justify-content-center">
+        <form id="new-task" class="form-inline">
             <label for="tname"></label>
-            <input type="text" id="tname" name="tname" placeholder="New Task">
-            <input type="submit" value="Add">
+            <input type="text" id="tname" name="tname" class="form-control" placeholder="New Task">
+            <input type="submit" value="Add" class="btn btn-light">
         </form>
         </div>
+
     </div>
 
     
