--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ aria-hidden="true">
 
     
     <footer class="container-fluid p-4">
-        &copy; Rod the Bod 2020.
+        &copy; Rodrigo Rojas 2020.
     </footer>
 
     <script src="index.js"></script>
